--- a/nagiosxi.yml
+++ b/nagiosxi.yml
@@ -90,11 +90,15 @@ Resources:
           echo "nagios" >/etc/hostname
           yum update -y
           yum install httpd php php-cli gcc gcc++  glibc glibc-common gd gd-devel net-snmp openssl-devel wget unzip -y
+          systemctl start httpd
+          systemctl enable httpd 
           cd /tmp/ 
           wget http://assets.nagios.com/downloads/nagiosxi/xi-latest.tar.gz 
           tar -zxf xi-latest.tar.gz
           cd /tmp/nagiosxi/
           ./fullinstall -n
+          chkconfig --add nagios
+          chkconfig nagios on
 
       KeyName: !Ref KeyName
       ImageId: ami-001986d37ece5b4ab #ami-0001378efdafd5401
