--- a/nagiosxi.yml
+++ b/nagiosxi.yml
@@ -196,11 +196,18 @@ Resources:
           chkconfig nagios on
 
           #install nagios log server
+          export PATH=$PATH:/usr/bin
+          yum -y install epel-release
+          yum -y update
           cd /tmp/ &&
           wget https://assets.nagios.com/downloads/nagios-log-server/nagioslogserver-latest.tar.gz &&
           tar -zxf nagioslogserver-latest.tar.gz &&
           cd /tmp/nagioslogserver/ &&
           ./fullinstall -m -n &&
+
+          # Disable iptables
+          iptables -F
+          service iptables stop
 
 
       KeyName: !Ref KeyName
@@ -252,8 +259,11 @@ Resources:
           chkconfig --level 2345 nrpe on
           sed -i '/allowed_hosts=127.0.0.1,::1/s/$/,${NAGIOSSERVERIP}/' /etc/nagios/nrpe.cfg
           systemctl ststus nagios-nrpe-server.service
-          sleep 300
-          curl -s -O http://${NAGIOSSERVERIP}/nagioslogserver/scripts/setup-linux.sh && bash setup-linux.sh -s ${NAGIOSSERVERIP} -p 5544
+          #nagiosloghost
+          #curl -s -O http://${NAGIOSSERVERIP}/nagioslogserver/scripts/setup-linux.sh
+          wget https://raw.githubusercontent.com/mehmetafsar510/jenkins-web-page-application-postgresql-nodejs-react-ansible/master/setup-linux.sh
+          chmod 777 setup-linux.sh
+          bash setup-linux.sh -s ${NAGIOSSERVERIP} -p 5544
       KeyName: !Ref KeyName  #netstat -an |grep 5666
       ImageId: ami-0747bdcabd34c712a
       InstanceType: !Ref InstanceType
