--- a/nagiosxi.yml
+++ b/nagiosxi.yml
@@ -227,22 +227,54 @@ Resources:
         Fn::Base64: !Sub |
           #!/bin/bash
           yum update -y
-          yum install openssl openssl-devel gcc make git -y
-          adduser -m nagios
-          echo ${NagiosPassword} | passwd nagios --stdin
+          yum install -y gcc glibc glibc-common openssl openssl-devel perl wget xinetd
+          cd /tmp
+          wget --no-check-certificate -O nrpe.tar.gz https://github.com/NagiosEnterprises/nrpe/archive/nrpe-4.0.3.tar.gz
+          tar xzf nrpe.tar.gz
+          cd /tmp/nrpe-nrpe-4.0.3/
+          ./configure --enable-command-args
+          make all
+          make install-groups-users
+          make install
+          make install-config
+          echo >> /etc/services
+          echo '# Nagios services' >> /etc/services
+          echo 'nrpe    5666/tcp' >> /etc/services
+          make install-init
+          systemctl enable nrpe.service
+          firewall-cmd --zone=public --add-port=5666/tcp
+          firewall-cmd --zone=public --add-port=5666/tcp --permanent
 
-          yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
-          yum install xinetd -y
-          yum -y install nagios-nrpe
-          systemctl enable xinetd
+          sed -i '/allowed_hosts=127.0.0.1,::1/s/$/,${NAGIOSSERVERIP}/' /usr/local/nagios/etc/nrpe.cfg
+          sed -i 's/^dont_blame_nrpe=.*/dont_blame_nrpe=1/g' /usr/local/nagios/etc/nrpe.cfg
+          sed -i '/check_disk/s/^#//g' /usr/local/nagios/etc/nrpe.cfg
+          sed -i '/check_swap/s/^#//g' /usr/local/nagios/etc/nrpe.cfg
+          sed -i '/check_cpu_stats/s/^#//g' /usr/local/nagios/etc/nrpe.cfg
+          sed -i '/check_mem/s/^#//g' /usr/local/nagios/etc/nrpe.cfg
+          sed -i '/check_init_service/s/^#//g' /usr/local/nagios/etc/nrpe.cfg
+          sed -i '/check_procs/s/^#//g' /usr/local/nagios/etc/nrpe.cfg
+          sed -i '/check_apt/s/^#//g' /usr/local/nagios/etc/nrpe.cfg
+          sed -i '/check_open_files/s/^#//g' /usr/local/nagios/etc/nrpe.cfg
+
+          cd /tmp
+          wget https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
+          rpm -ihv epel-release-latest-8.noarch.rpm
+          subscription-manager repos --enable=rhel-8-for-x86_64-appstream-rpms
+          subscription-manager repos --enable=rhel-8-for-x86_64-baseos-rpms
+          subscription-manager repos --enable=codeready-builder-for-rhel-8-x86_64-rpms
+          yum install -y gcc glibc glibc-common make gettext automake autoconf wget openssl-devel net-snmp net-snmp-utils
+          yum install -y perl-Net-SNMP
+
+          cd /tmp
+          wget --no-check-certificate -O nagios-plugins.tar.gz https://github.com/nagios-plugins/nagios-plugins/archive/release-2.2.1.tar.gz
+          tar zxf nagios-plugins.tar.gz
+          cd /tmp/nagios-plugins-release-2.2.1/
+          ./tools/setup && ./configure
+          make && make install
+          systemctl restart nrpe.service
           systemctl restart xinetd
-          systemctl reload xinetd
-          chkconfig --level 2345 nrpe on
-          sed -i '/allowed_hosts=127.0.0.1,::1/s/$/,${NAGIOSSERVERIP}/' /etc/nagios/nrpe.cfg
-          sed -i 's/<ip-address-of-nagios-core>/${NAGIOSSERVERIP}/g' /etc/xinetd.d/nrpe
-          systemctl restart xinetd
-          service nrpe start
-          dnf install net-tools -y
+
+          
       KeyName: !Ref KeyName  #netstat -an |grep 5666
       ImageId: ami-0b0af3577fe5e3532
       InstanceType: !Ref InstanceType
@@ -258,51 +290,65 @@ Resources:
         Fn::Base64: !Sub |
           #!/bin/bash
           apt-get update && apt-get upgrade -y
-          apt install openssl libssl-dev gcc make git -y
-          adduser -m nagios
-          echo ${NagiosPassword} | passwd nagios --stdin
-          wget http://www.nagios-plugins.org/download/nagios-plugins-2.2.1.tar.gz
-          tar zxf nagios-plugins-2.2.1.tar.gz
-          cd /home/ubuntu/nagios-plugins-2.2.1
-          ./configure
-          make
-          make install
-          cd /home/ubuntu/
-          git clone --recursive https://github.com/valerytschopp/ceph-nagios-plugins.git
-          cd /home/ubuntu/ceph-nagios-plugins
-          make dist
-          make install
-          apt install xinetd -y
-          cd /home/ubuntu/
-          wget https://github.com/NagiosEnterprises/nrpe/releases/download/nrpe-3.1.0/nrpe-3.1.0.tar.gz
-          tar xvfz nrpe-3.1.0.tar.gz
-          cd /home/ubuntu/nrpe-3.1.0
-          ./configure
+          apt-get install -y autoconf automake gcc libc6 libmcrypt-dev make libssl-dev wget openssl xinetd
+          apt-get install -y bc gawk dc build-essential snmp libnet-snmp-perl gettext
+          cd /tmp
+          wget --no-check-certificate -O nrpe.tar.gz https://github.com/NagiosEnterprises/nrpe/archive/nrpe-4.0.3.tar.gz
+          tar xzf nrpe.tar.gz
+          cd /tmp/nrpe-nrpe-4.0.3/
+          ./configure --enable-command-args --with-ssl-lib=/usr/lib/x86_64-linux-gnu/
           make all
           make install-groups-users
           make install
           make install-config
+          sh -c "echo >> /etc/services"
+          sh -c "sudo echo '# Nagios services' >> /etc/services"
+          sh -c "sudo echo 'nrpe    5666/tcp' >> /etc/services"
           make install-init
-          systemctl enable xinetd
-          systemctl restart xinetd
-          systemctl reload xinetd
-          systemctl enable nrpe
-          systemctl start nrpe
-          sed -i '/allowed_hosts=127.0.0.1,::1/s/$/,${NAGIOSSERVERIP}/' /etc/nagios/nrpe.cfg
-          sed -i 's/<ip-address-of-nagios-core>/${NAGIOSSERVERIP}/g' /etc/xinetd.d/nrpe
-          systemctl restart xinetd
-          systemctl restart nrpe
+          systemctl enable nrpe.service
+          mkdir -p /etc/ufw/applications.d
+          sh -c "echo '[NRPE]' > /etc/ufw/applications.d/nagios"
+          sh -c "echo 'title=Nagios Remote Plugin Executor' >> /etc/ufw/applications.d/nagios"
+          sh -c "echo 'description=Allows remote execution of Nagios plugins' >> /etc/ufw/applications.d/nagios"
+          sh -c "echo 'ports=5666/tcp' >> /etc/ufw/applications.d/nagios"
+          ufw allow NRPE
+          ufw reload
+          sed -i '/allowed_hosts=127.0.0.1,::1/s/$/,54.86.181.234/' /usr/local/nagios/etc/nrpe.cfg
+          sed -i 's/^dont_blame_nrpe=.*/dont_blame_nrpe=1/g' /usr/local/nagios/etc/nrpe.cfg
+          sed -i '/check_disk/s/^#//g' /usr/local/nagios/etc/nrpe.cfg
+          sed -i '/check_swap/s/^#//g' /usr/local/nagios/etc/nrpe.cfg
+          sed -i '/check_cpu_stats/s/^#//g' /usr/local/nagios/etc/nrpe.cfg
+          sed -i '/check_mem/s/^#//g' /usr/local/nagios/etc/nrpe.cfg
+          sed -i '/check_init_service/s/^#//g' /usr/local/nagios/etc/nrpe.cfg
+          sed -i '/check_procs/s/^#//g' /usr/local/nagios/etc/nrpe.cfg
+          sed -i '/check_apt/s/^#//g' /usr/local/nagios/etc/nrpe.cfg
+          sed -i '/check_open_files/s/^#//g' /usr/local/nagios/etc/nrpe.cfg 
+      
+          /usr/bin/install -c -m  775 -o nagios -g nagios -d /usr/local/nagios/libexec 
+          chown nagios:nagios /usr/local/nagios/libexec/check_nrpe
+          chmod 775 /usr/local/nagios/libexec/check_nrpe
+          /usr/bin/install -c -m 775 -o nagios -g nagios -d /usr/local/nagios/etc
+          chown nagios:nagios /usr/local/nagios/etc/nrpe.cfg
+          chmod 644 /usr/local/nagios/etc/nrpe.cfg
 
-          #apt install xinetd -y
-          #apt install nagios-nrpe-server nagios-plugins -y
-          #systemctl enable xinetd
-          #systemctl restart xinetd
-          #systemctl reload xinetd
-          #chkconfig --level 2345 nrpe on
-          #sed -i '/allowed_hosts=127.0.0.1,::1/s/$/,${NAGIOSSERVERIP}/' /etc/nagios/nrpe.cfg
-          #sed -i 's/<ip-address-of-nagios-core>/${NAGIOSSERVERIP}/g' /etc/xinetd.d/nrpe
-          #systemctl restart xinetd
-          #systemctl restart nagios-nrpe-server
+          cd /usr/local/nagios/libexec
+          wget https://pikedom.com/wp-content/uploads/2019/11/check_cpu_stats.pl
+          mv -f check_cpu_stats.pl check_cpu_stats.sh
+          chown -v nagios:nagios /usr/local/nagios/libexec/check_cpu_stats.sh
+          chmod -v u+x /usr/local/nagios/libexec/check_cpu_stats.sh
+          
+          cd /tmp
+          wget --no-check-certificate -O nagios-plugins.tar.gz https://github.com/nagios-plugins/nagios-plugins/archive/release-2.3.3.tar.gz
+          tar zxf nagios-plugins.tar.gz
+          cd /tmp/nagios-plugins-release-2.3.3/
+          ./tools/setup && ./configure
+          make && make install
+
+          sh -c "echo 'nagios ALL=(ALL) NOPASSWD:/usr/local/nagios/libexec/check_init_service' >> /etc/sudoers"
+      
+          systemctl start nrpe.service
+          systemctl restart xinetd
+
           #nagiosloghost
           #curl -s -O http://${NAGIOSSERVERIP}/nagioslogserver/scripts/setup-linux.sh
           #wget https://raw.githubusercontent.com/mehmetafsar510/jenkins-web-page-application-postgresql-nodejs-react-ansible/master/setup-linux.sh
