--- a/nagiosxi.yml
+++ b/nagiosxi.yml
@@ -227,7 +227,7 @@ Resources:
         Fn::Base64: !Sub |
           #!/bin/bash
           yum update -y
-          yum install -y gcc glibc glibc-common openssl openssl-devel perl wget xinetd zip
+          yum install -y gcc glibc glibc-common openssl openssl-devel perl wget xinetd zip sysstat
           cd /tmp
           wget --no-check-certificate -O nrpe.tar.gz https://github.com/NagiosEnterprises/nrpe/archive/nrpe-4.0.3.tar.gz
           tar xzf nrpe.tar.gz
@@ -271,6 +271,21 @@ Resources:
           cd /tmp/nagios-plugins-release-2.2.1/
           ./tools/setup && ./configure
           make && make install
+
+          cd /tmp
+          wget https://github.com/mehmetafsar510/jenkins-web-page-application-postgresql-nodejs-react-ansible/raw/master/libexec.zip
+          unzip libexec.zip
+          rm -rf  /usr/local/nagios/libexec
+          mv -f libexec /usr/local/nagios/
+          chown -v nagios:nagios /usr/local/nagios/libexec/*
+          chmod 775 /usr/local/nagios/libexec/*
+
+          /usr/bin/install -c -m  775 -o nagios -g nagios -d /usr/local/nagios/libexec 
+          /usr/bin/install -c -m 775 -o nagios -g nagios -d /usr/local/nagios/etc
+          chown nagios:nagios /usr/local/nagios/etc/nrpe.cfg
+          chmod 644 /usr/local/nagios/etc/nrpe.cfg
+
+          sh -c "echo 'nagios ALL=(ALL) NOPASSWD:/usr/local/nagios/libexec/check_init_service' >> /etc/sudoers"
           systemctl restart nrpe.service
           systemctl restart xinetd
 
@@ -290,7 +305,7 @@ Resources:
         Fn::Base64: !Sub |
           #!/bin/bash
           apt-get update && apt-get upgrade -y
-          apt-get install -y autoconf automake gcc libc6 libmcrypt-dev make libssl-dev wget openssl xinetd
+          apt-get install -y autoconf automake gcc libc6 libmcrypt-dev make libssl-dev wget openssl xinetd zip sysstat
           apt-get install -y bc gawk dc build-essential snmp libnet-snmp-perl gettext
           cd /tmp
           wget --no-check-certificate -O nrpe.tar.gz https://github.com/NagiosEnterprises/nrpe/archive/nrpe-4.0.3.tar.gz
@@ -324,13 +339,6 @@ Resources:
           sed -i '/check_apt/s/^#//g' /usr/local/nagios/etc/nrpe.cfg
           sed -i '/check_open_files/s/^#//g' /usr/local/nagios/etc/nrpe.cfg 
       
-          /usr/bin/install -c -m  775 -o nagios -g nagios -d /usr/local/nagios/libexec 
-          chown nagios:nagios /usr/local/nagios/libexec/check_nrpe
-          chmod 775 /usr/local/nagios/libexec/check_nrpe
-          /usr/bin/install -c -m 775 -o nagios -g nagios -d /usr/local/nagios/etc
-          chown nagios:nagios /usr/local/nagios/etc/nrpe.cfg
-          chmod 644 /usr/local/nagios/etc/nrpe.cfg
-
           cd /tmp
           wget --no-check-certificate -O nagios-plugins.tar.gz https://github.com/nagios-plugins/nagios-plugins/archive/release-2.3.3.tar.gz
           tar zxf nagios-plugins.tar.gz
@@ -338,11 +346,18 @@ Resources:
           ./tools/setup && ./configure
           make && make install
 
-          cd /usr/local/nagios/libexec
+          cd /tmp
           wget https://github.com/mehmetafsar510/jenkins-web-page-application-postgresql-nodejs-react-ansible/raw/master/libexec.zip
           unzip libexec.zip
+          rm -rf  /usr/local/nagios/libexec
+          mv -f libexec /usr/local/nagios/
           chown -v nagios:nagios /usr/local/nagios/libexec/*
-          chmod -v u+x /usr/local/nagios/libexec/*
+          chmod 775 /usr/local/nagios/libexec/*
+
+          /usr/bin/install -c -m  775 -o nagios -g nagios -d /usr/local/nagios/libexec 
+          /usr/bin/install -c -m 775 -o nagios -g nagios -d /usr/local/nagios/etc
+          chown nagios:nagios /usr/local/nagios/etc/nrpe.cfg
+          chmod 644 /usr/local/nagios/etc/nrpe.cfg
 
           sh -c "echo 'nagios ALL=(ALL) NOPASSWD:/usr/local/nagios/libexec/check_init_service' >> /etc/sudoers"
       
