--- a/docker_project.yml
+++ b/docker_project.yml
@@ -166,7 +166,7 @@
     image_name: mehmet/react
     artf_container_name: mehmet_react_artf
     artf_image_name: mehmet/react_artf
-    nginx_certbot_path: /home/ec2-user/nginx-certbot
+    nginx_certbot_path: /home/ec2-user/nginx-certbot-docker
   tasks:
     - name: create build directory
       file:
@@ -190,7 +190,7 @@
         state: present
     - name: Clone a github repository
       git:
-        repo: https://github.com/wmnnd/nginx-certbot.git
+        repo: https://github.com/kopuskopecik/nginx-certbot-docker.git
         dest: "{{ nginx_certbot_path }}"
         clone: yes
         update: yes      
@@ -198,17 +198,17 @@
       copy:
         src: "{{react_home}}/docker-compose.yml"
         dest: "{{ nginx_certbot_path }}"
-    - name: copy init-letsencrypt.sh
+    - name: copy config.env file
       copy:
-        src: "{{react_home}}/init-letsencrypt.sh"
+        src: "{{react_home}}/config.env"
         dest: "{{ nginx_certbot_path }}"
         owner: ec2-user
         group: ec2-user
         mode: '0775'
-    - name: copy app.conf files
+    - name: copy default.conf file
       copy:
-        src: "{{react_home}}/data/"
-        dest: "{{ nginx_certbot_path }}"
+        src: "{{react_home}}/default.conf"
+        dest: "{{ nginx_certbot_path }}/nginx"
         owner: ec2-user
         group: ec2-user
         mode: '0775'
@@ -223,6 +223,15 @@
           path: "{{ container_path }}"
         source: build
         state: present
+
+    - name: Launch nginx and react artifact container
+      docker_container:
+        name: "{{ artf_container_name }}"
+        image: "{{ artf_image_name }}"
+        state: started
+        ports:
+        - "3000:3000"
+    
     #- name: Launch nginx and react artifact container
     #  docker_container:
     #    name: "{{ artf_container_name }}"
