--- a/react_files/docker-compose.yml
+++ b/react_files/docker-compose.yml
@@ -1,21 +1,47 @@
-version: '3'
+version: "2"
 
 services:
   nginx:
-    image: nginx:1.15-alpine
-    restart: unless-stopped
+    build: ./nginx
+    image: devcomanda/nginx
+    env_file:
+      - ./config.env
     volumes:
-      - ./data/nginx:/etc/nginx/conf.d
-      - ./data/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
+      - devcomanda_nginx_ssl:/etc/nginx/ssl
+      - devcomanda_certbot_certs:/etc/letsencrypt
+      - test1_devcomanda_com_certbot:/var/www/certbot/post.mehmetafsar.com
+      - ./html:/var/www/html/post.mehmetafsar.com
     ports:
       - "80:80"
       - "443:443"
-    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+    restart: always
+
   certbot:
-    image: certbot/certbot
-    restart: unless-stopped
+    build: ./certbot
+    image: devcomanda/certbot
+    env_file:
+      - ./config.env
     volumes:
-      - ./data/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+      - devcomanda_certbot_certs:/etc/letsencrypt
+      - test1_devcomanda_com_certbot:/var/www/certbot/post.mehmetafsar.com
+    depends_on:
+      - nginx
+
+  cron:
+    build: ./cron
+    image: devcomanda/cron
+    environment:
+      COMPOSE_PROJECT_NAME: "${COMPOSE_PROJECT_NAME}"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./:/workdir:ro
+    depends_on:
+      - nginx
+      - certbot
+
+volumes:
+  devcomanda_nginx_ssl:
+    external: true
+  devcomanda_certbot_certs:
+    external: true
+  test1_devcomanda_com_certbot:
