--- a/react_files/data/data/nginx/app.conf
+++ b/react_files/data/data/nginx/app.conf
@@ -17,16 +17,10 @@ server {
     server_name post.mehmetafsar.com;
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/example.org/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/example.org/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/post.mehmetafsar.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/post.mehmetafsar.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
-    ssl on;
-    ssl_session_cache  builtin:1000  shared:SSL:10m;
-    ssl_protocols  TLSv1 TLSv1.1 TLSv1.2;
-    ssl_ciphers HIGH:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
-    ssl_prefer_server_ciphers on;
 
     location / {
 
@@ -36,9 +30,9 @@ server {
       proxy_set_header        X-Forwarded-Proto $scheme;
 
       # Fix the “It appears that your reverse proxy set up is broken" error.
-      proxy_pass          http://localhost:3000;
+      proxy_pass          http://{{react_ip}};
       proxy_read_timeout  90;
 
-      proxy_redirect      http://localhost:3000 https://post.mehmetafsar.com;
+      #proxy_redirect      http://{{react_ip}} https://post.mehmetafsar.com;
     }
   }
