--- a/react_files/data/data/nginx/app.conf
+++ b/react_files/data/data/nginx/app.conf
@@ -30,7 +30,7 @@ server {
       proxy_set_header        X-Forwarded-Proto $scheme;
 
       # Fix the “It appears that your reverse proxy set up is broken" error.
-      proxy_pass          http://{{react_ip}};
+      proxy_pass          http://54.224.89.180;
       proxy_read_timeout  90;
 
       #proxy_redirect      http://{{react_ip}} https://post.mehmetafsar.com;
