--- a/react_files/data/data/nginx/app.conf
+++ b/react_files/data/data/nginx/app.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name post.mehmetafsar.com;
+    server_name clarusway.mehmetafsar.com;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
@@ -8,31 +8,32 @@ server {
     }
     location / {
         return 301 https://$host$request_uri;
+
     }
 }
 
 server {
 
     listen 443 ssl;
-    server_name post.mehmetafsar.com;
+    server_name clarusway.mehmetafsar.com;
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/post.mehmetafsar.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/post.mehmetafsar.com/privkey.pem;
+    location / {
+        try_files $uri @react;
+    }
+
+    ssl_certificate /etc/letsencrypt/live/clarusway.mehmetafsar.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/clarusway.mehmetafsar.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-    location / {
+    location @react {
 
       proxy_set_header        Host $host;
       proxy_set_header        X-Real-IP $remote_addr;
       proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header        X-Forwarded-Proto $scheme;
-
-      # Fix the “It appears that your reverse proxy set up is broken" error.
-      proxy_pass          http://54.224.89.180;
-      proxy_read_timeout  90;
-
-      #proxy_redirect      http://{{react_ip}} https://post.mehmetafsar.com;
     }
+    root   /usr/share/nginx/html;
+    index  index.html index.htm;
   }
