--- a/docker_project.yml
+++ b/docker_project.yml
@@ -121,6 +121,7 @@
     container_path: /home/ec2-user/nodejs
     container_name: mehmet_nodejs
     image_name: mehmet/nodejs
+    nginx_certbot_path: /home/ec2-user/nginx-certbot
   tasks:
     - name: create build directory
       file:
@@ -138,6 +139,34 @@
       copy:
         src: "{{nodejs_home}}/Dockerfile"
         dest: "{{ container_path }}"
+    - name: Install Git
+      yum:
+        name: git
+        state: present
+    - name: Clone a github repository
+      git:
+        repo: https://github.com/wmnnd/nginx-certbot.git
+        dest: "{{ nginx_certbot_path }}"
+        clone: yes
+        update: yes      
+    - name: copy Docker Compose files
+      copy:
+        src: "{{nodejs_home}}/docker-compose.yml"
+        dest: "{{ nginx_certbot_path }}"
+    - name: copy init-letsencrypt.sh
+      copy:
+        src: "{{nodejs_home}}/init-letsencrypt.sh"
+        dest: "{{ nginx_certbot_path }}"
+        owner: ec2-user
+        group: ec2-user
+        mode: '0775'
+    - name: copy app.conf files
+      copy:
+        src: "{{nodejs_home}}/data/"
+        dest: "{{ nginx_certbot_path }}"
+        owner: ec2-user
+        group: ec2-user
+        mode: '0775'
     - name: remove {{ container_name }} container and {{ image_name }} if exists
       shell: "docker ps -q --filter 'name={{ container_name }}' | grep -q . && docker stop {{ container_name }} && docker rm -fv {{ container_name }} && docker image rm -f {{ image_name }} || echo 'Not Found'"
     - name: build container image
@@ -154,6 +183,16 @@
         state: started
         ports:
         - "5000:5000"
+    - name: let's start encrypt
+      become: false
+      shell: "cd {{ nginx_certbot_path }} && ./init-letsencrypt.sh"
+    - name: deploy Docker Compose stack
+      become: false
+      docker_compose:
+        project_src: "{{ nginx_certbot_path }}"
+        files: docker-compose.yml
+        state: present
+
 - name: React UI Server configuration
   hosts: _ansible_react
   become: true
