--- a/nodejs_files/data/data/nginx/app.conf
+++ b/nodejs_files/data/data/nginx/app.conf
@@ -6,34 +6,31 @@ server {
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
+
     location / {
         return 301 https://$host$request_uri;
-
     }
 }
 
 server {
-
     listen 443 ssl;
     server_name {FQDN};
     server_tokens off;
 
-    location / {
-        try_files $uri @react;
-    }
-
+    proxy_buffer_size 128k;
+    proxy_buffers 4 256k;
+    proxy_busy_buffers_size 256k;
     ssl_certificate /etc/letsencrypt/live/{FQDN}/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/{FQDN}/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
-    location @react {
-
-      proxy_set_header        Host $host;
-      proxy_set_header        X-Real-IP $remote_addr;
-      proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header        X-Forwarded-Proto $scheme;
+    location / {
+                try_files $uri @nodejs;
+        }
+    location @nodejs {
+        proxy_pass  http://{{nodejs_ip}}:5000;
+        proxy_set_header    Host                $http_host;
+        proxy_set_header    X-Real-IP           $remote_addr;
+        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
     }
-    root   /usr/share/nginx/html;
-    index  index.html index.htm;
-  }
+}
